# FYP-Autonomous-Ground-Vehicles

./: README.md
PerceptionCorner/: Detectnet.sh  vel.py  zed_tracking.py
PerceptionCorner/ws/install/: local_setup.sh  setup.sh
PerceptionCorner/ws/install/detectnet_ros/lib/detectnet_ros/: detectnet_node
PerceptionCorner/ws/install/detectnet_ros/share/detectnet_ros/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
PerceptionCorner/ws/install/traffic_cam_pkg/share/traffic_cam_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
PerceptionCorner/ws/install/zed_components/include/zed_components/: cost_traversability.hpp  gnss_replay.hpp  json.hpp  sl_logging.hpp  sl_tools.hpp  sl_types.hpp  sl_win_avg.hpp  visibility_control.hpp  zed_camera_component.hpp  zed_camera_one_component.hpp
PerceptionCorner/ws/install/zed_components/share/zed_components/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
PerceptionCorner/ws/install/zed_ros2/share/zed_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
PerceptionCorner/ws/install/zed_wrapper/share/zed_wrapper/: local_setup.bash  local_setup.dsv  local_setup.sh  (+3 more)
PerceptionCorner/ws/log/: latest_build
PerceptionCorner/ws/models/trafficcamnet/: config_infer_trafficcamnet.txt  resnet18_trafficcamnet_pruned.onnx_b1_gpu0_fp16.engine
PerceptionCorner/ws/src/traffic_cam_pkg/: CMakeLists.txt  package.xml
PerceptionCorner/ws/src/traffic_cam_pkg/config/: traffic_labels.txt
(+43 files in other folders)
