<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traffic_cam_pkg</name>
  <version>0.0.0</version>
  <description>FYP Perception Stack using Isaac ROS and ZED2</description>
  <maintainer email="nourstalgie@ubuntu.com">nourstalgie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>isaac_ros_tensor_rt</exec_depend>
  <exec_depend>isaac_ros_dnn_image_encoder</exec_depend>
  <exec_depend>isaac_ros_detectnet</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
